-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8014593 | 8 | Jon Masamitsu | P3 | Resolved | Fixed | b90 |
The compute_new_size() for ConcurrentMarkSweepGeneration is called after a collection is done
for cases where UseCMSCompactAtFullCollection has been set to true or false. If false, then
the collection does a mark-sweep without a compaction so the reset_after_compaction() should
not be called from compute_new_size().
for cases where UseCMSCompactAtFullCollection has been set to true or false. If false, then
the collection does a mark-sweep without a compaction so the reset_after_compaction() should
not be called from compute_new_size().
- backported by
-
JDK-8014593 CMS: Call reset_after_compaction() only if a compaction has been done
-
- Resolved
-