8013184: CMS: Call reset_after_compaction() only if a compaction has been done

Reviewed-by: mgerdin, johnc, tschatzl